--- a/appsscript.json
+++ b/appsscript.json
@@ -3,5 +3,10 @@
   "dependencies": {
   },
   "exceptionLogging": "STACKDRIVER",
+  "oauthScopes": [
+    "https://www.googleapis.com/auth/script.external_request",
+    "https://www.googleapis.com/auth/spreadsheets",
+    "https://www.googleapis.com/auth/script.container.ui"
+  ],
   "runtimeVersion": "V8"
 }
